--- a/港城公交/ZJGBus/ZJGBus/CellView/SearchResultTableViewCell.xib
+++ b/港城公交/ZJGBus/ZJGBus/CellView/SearchResultTableViewCell.xib
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,38 +15,41 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customSearchResultCellID" rowHeight="105" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="ZJGBus" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="358" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="358" height="99.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="358" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--路" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f38-tj-VKy">
-                        <rect key="frame" x="8" y="23" width="48" height="30"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                        <rect key="frame" x="25" y="38" width="80" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="XQm-tD-wKW"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="首站：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxd-Gg-lvI">
-                        <rect key="frame" x="71" y="20" width="45" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="末站：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Go-Ks-hu6">
-                        <rect key="frame" x="71" y="61" width="45" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <rect key="frame" x="130" y="63.5" width="42" height="20"/>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                        <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="--" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3f-xG-xcc">
-                        <rect key="frame" x="124" y="20" width="14" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <rect key="frame" x="180" y="16" width="17" height="20"/>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hu1-gA-tpK">
-                        <rect key="frame" x="124" y="61" width="14" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <rect key="frame" x="180" y="63.5" width="17" height="20"/>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="首站：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxd-Gg-lvI">
+                        <rect key="frame" x="130" y="16" width="42" height="20"/>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                        <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -52,13 +59,13 @@
                     <constraint firstItem="7Go-Ks-hu6" firstAttribute="leading" secondItem="Fxd-Gg-lvI" secondAttribute="leading" id="NsE-ur-VvW"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="L3f-xG-xcc" secondAttribute="trailing" id="Oir-XC-Ajh"/>
                     <constraint firstItem="hu1-gA-tpK" firstAttribute="leading" secondItem="7Go-Ks-hu6" secondAttribute="trailing" constant="8" id="Pmi-Uh-iAB"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="7Go-Ks-hu6" secondAttribute="bottom" constant="12" id="S6T-HP-rbT"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="7Go-Ks-hu6" secondAttribute="bottom" constant="8" id="S6T-HP-rbT"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="hu1-gA-tpK" secondAttribute="trailing" id="TnE-YF-QdC"/>
-                    <constraint firstItem="Fxd-Gg-lvI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="cuK-FG-w9a"/>
-                    <constraint firstItem="Fxd-Gg-lvI" firstAttribute="leading" secondItem="f38-tj-VKy" secondAttribute="trailing" constant="15" id="dD0-32-Jyi"/>
-                    <constraint firstItem="f38-tj-VKy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="kuL-Is-xzj"/>
+                    <constraint firstItem="f38-tj-VKy" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XWR-aV-czV"/>
+                    <constraint firstItem="Fxd-Gg-lvI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="cuK-FG-w9a"/>
+                    <constraint firstItem="Fxd-Gg-lvI" firstAttribute="leading" secondItem="f38-tj-VKy" secondAttribute="trailing" constant="25" id="dD0-32-Jyi"/>
+                    <constraint firstItem="f38-tj-VKy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="17" id="kuL-Is-xzj"/>
                     <constraint firstItem="L3f-xG-xcc" firstAttribute="leading" secondItem="Fxd-Gg-lvI" secondAttribute="trailing" constant="8" id="lpH-xJ-QdM"/>
-                    <constraint firstItem="f38-tj-VKy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="15" id="ztl-Bj-5MJ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
