--- a/港城公交/ZJGBus/ZJGBus/HomeViewController.xib
+++ b/港城公交/ZJGBus/ZJGBus/HomeViewController.xib
@@ -26,7 +26,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XHv-2S-XYQ">
-                    <rect key="frame" x="20" y="44" width="335" height="563"/>
+                    <rect key="frame" x="10" y="44" width="355" height="563"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="86f-6W-52l"/>
@@ -58,18 +58,25 @@
                     <rect key="frame" x="0.0" y="0.0" width="374" height="39"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GY-kM-qae">
-                            <rect key="frame" x="20" y="8" width="13" height="22"/>
+                            <rect key="frame" x="8" y="4" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="1VI-u5-c6F"/>
+                                <constraint firstAttribute="width" secondItem="6GY-kM-qae" secondAttribute="height" multiplier="1:1" id="gpm-zR-thr"/>
+                            </constraints>
                             <state key="normal" image="收藏"/>
+                            <connections>
+                                <action selector="goToCollections:" destination="-1" eventType="touchUpInside" id="JhD-WF-KAh"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="6GY-kM-qae" firstAttribute="leading" secondItem="kt4-Y1-PxK" secondAttribute="leadingMargin" constant="12" id="shU-cQ-P1C"/>
+                        <constraint firstItem="6GY-kM-qae" firstAttribute="leading" secondItem="kt4-Y1-PxK" secondAttribute="leadingMargin" id="shU-cQ-P1C"/>
                         <constraint firstItem="6GY-kM-qae" firstAttribute="centerY" secondItem="kt4-Y1-PxK" secondAttribute="centerY" id="xvc-95-EdQ"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsF-Ei-8Kk">
-                    <rect key="frame" x="309" y="561" width="41" height="41"/>
+                    <rect key="frame" x="319" y="561" width="41" height="41"/>
                     <state key="normal" image="往-按钮"/>
                     <state key="selected" image="返-按钮"/>
                     <connections>
@@ -77,7 +84,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4I1-Jy-Ydf">
-                    <rect key="frame" x="319" y="531" width="21" height="22"/>
+                    <rect key="frame" x="319" y="512" width="41" height="41"/>
                     <state key="normal" image="默认"/>
                     <state key="selected" image="选中"/>
                     <connections>
@@ -89,18 +96,18 @@
             <constraints>
                 <constraint firstItem="5iC-zh-GUo" firstAttribute="centerX" secondItem="XHv-2S-XYQ" secondAttribute="centerX" id="8gr-5S-y1b"/>
                 <constraint firstItem="WsF-Ei-8Kk" firstAttribute="top" secondItem="4I1-Jy-Ydf" secondAttribute="bottom" constant="8" id="AnR-Og-yJf"/>
-                <constraint firstAttribute="trailing" secondItem="WsF-Ei-8Kk" secondAttribute="trailing" constant="25" id="Dar-lC-0ZI"/>
+                <constraint firstAttribute="trailing" secondItem="WsF-Ei-8Kk" secondAttribute="trailing" constant="15" id="Dar-lC-0ZI"/>
                 <constraint firstAttribute="bottom" secondItem="5iC-zh-GUo" secondAttribute="bottom" id="FKl-Mf-LYl"/>
                 <constraint firstItem="4I1-Jy-Ydf" firstAttribute="centerX" secondItem="WsF-Ei-8Kk" secondAttribute="centerX" id="Huc-qX-4KL"/>
                 <constraint firstItem="5iC-zh-GUo" firstAttribute="top" secondItem="WsF-Ei-8Kk" secondAttribute="bottom" constant="10" id="Oqz-bJ-Ntd"/>
                 <constraint firstItem="5iC-zh-GUo" firstAttribute="top" secondItem="XHv-2S-XYQ" secondAttribute="bottom" constant="5" id="RZk-S1-Hh9"/>
                 <constraint firstItem="kt4-Y1-PxK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Scx-sr-Kmb"/>
                 <constraint firstItem="XHv-2S-XYQ" firstAttribute="top" secondItem="kt4-Y1-PxK" secondAttribute="bottom" constant="5" id="XSF-gf-1kc"/>
-                <constraint firstAttribute="trailing" secondItem="XHv-2S-XYQ" secondAttribute="trailing" constant="20" id="ggD-4g-x23"/>
+                <constraint firstAttribute="trailing" secondItem="XHv-2S-XYQ" secondAttribute="trailing" constant="10" id="ggD-4g-x23"/>
                 <constraint firstItem="5iC-zh-GUo" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lCa-Up-bR7"/>
                 <constraint firstItem="kt4-Y1-PxK" firstAttribute="trailing" secondItem="5iC-zh-GUo" secondAttribute="trailing" id="o10-Wq-xmo"/>
                 <constraint firstItem="XHv-2S-XYQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="ppQ-o2-FJJ"/>
-                <constraint firstItem="XHv-2S-XYQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="uh7-hr-cE6"/>
+                <constraint firstItem="XHv-2S-XYQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="uh7-hr-cE6"/>
                 <constraint firstItem="kt4-Y1-PxK" firstAttribute="leading" secondItem="5iC-zh-GUo" secondAttribute="leading" id="xir-V8-XNP"/>
                 <constraint firstAttribute="bottom" secondItem="XHv-2S-XYQ" secondAttribute="bottom" constant="60" id="xzI-Ug-EkB"/>
             </constraints>
@@ -112,7 +119,7 @@
         <image name="搜索" width="14" height="14"/>
         <image name="收藏" width="13" height="13"/>
         <image name="返-按钮" width="41" height="41"/>
-        <image name="选中" width="20" height="20"/>
-        <image name="默认" width="21" height="21"/>
+        <image name="选中" width="41" height="41"/>
+        <image name="默认" width="41" height="41"/>
     </resources>
 </document>
